--- a/templates/latinx.html
+++ b/templates/latinx.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Home Page</title>
+    <title>Latinx Data</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -16,7 +16,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
 
             <li class="nav-link">
-                <button type="button" class="btn btn-secondary " href="index.html"> Home </button>
+                <a type="button" class="btn btn-secondary" href="index.html"> Home </a>
             </li>
 
             <!-- Navbar dropdown -->
@@ -42,27 +42,21 @@
 
     <div class="row">
 
-        <div class="col-md-6" id="hero">
-            <img src="Images/AdobeStock_129957394.jpeg " width=100%, height=400px, alt="Starting Block ">
-        </div>
-        <div class="col-md-5" id="title" style=background-color:rgba(215,154,133,255)>
-            <h2>Race and Gender Imbalances in the U.S. Workforce</h2>
-        </div>
+
+
+        < <div class="row">
+
+
+
+
+            <footer class="footer ">
+
+            </footer>
     </div>
-
-    < <div class="row">
-
-
-
-
-        <footer class="footer ">
-
-        </footer>
-        </div>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js "></script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js "></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
 </body>
 
 </html>
