--- a/templates/asians.html
+++ b/templates/asians.html
@@ -12,8 +12,8 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm bg-light navbar-dark ">
-        <div class="collapse navbar-collapse" id="navbarNav">
+    <nav class="navbar navbar-expand-sm bg-white navbar-dark ">
+        <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 
             <li class="nav-link">
                 <a type="button" class="btn btn-secondary" href="index.html"> Home </a>
@@ -23,7 +23,7 @@
             <li class="nav-link dropdown">
                 <div class="btn-group">
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Visualizations
+                        Analyses
                     </button>
                     <div class="dropdown-menu dropdown-menu-right">
                         <a class="dropdown-item" type="button" href="overview.html">Overview</a>
@@ -44,15 +44,16 @@
 
 
 
-        < <div class="row">
+    </div>>
 
 
 
 
-            <footer class="footer ">
+    <footer class="footer ">
+        <br>
+        <p>Copyright 2021 Michal Fineman</p>
+    </footer>
 
-            </footer>
-    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js "></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
