--- a/templates/asians.html
+++ b/templates/asians.html
@@ -40,14 +40,37 @@
     </nav>
 
 
-    <div class="row">
 
+    <div class="container-fluid" id="detail_pages">
+        <div class="row" id="detail">
+            <div class="col-md-12" id="detail_title_section">
+                <h3>Asians</h3>
+                <br>
+                <p></p>
+            </div>
+        </div>
+        <div class="row" id="inside_pages">
+            <div class="col-sm-6" id="charts">
+                <img src="Images/Asians_twenty_year_graph.png" alt="Asians line graph, 2010-2029">
+            </div>
 
+            <div class="col-sm-6" id="charts" </div>
+                <img src="Images/White_thirteen_year_graph.png" alt="Whites line graph, 2010-2029">
+            </div>
+        </div>
 
-    </div>>
+        <div class="row" id="inside_pages">
+            <div class="col-sm-6" id="charts_left_2">
+                <img src="Images/Asians_ratios_2010-2029.png" alt="advancement ratios 2010-2029">
+            </div>
 
+            <div class="col-sm-6" id="charts_right_2" </div>
+                <img src="Images/Asians_ratio_change19.png" alt="Asians ratio change 10 years">
+                <img src="Images/Asians_ratio_change29.png" alt="Asians ratio change 20 years">
+            </div>
+        </div>
 
-
+    </div>
 
     <footer class="footer ">
         <br>
