--- a/templates/latinx.html
+++ b/templates/latinx.html
@@ -39,14 +39,36 @@
 
     </nav>
 
+    <div class="container-fluid" id="detail_pages">
+        <div class="row" id="detail">
+            <div class="col-md-12" id="detail_title_section">
+                <h3>Latinx</h3>
+                <br>
+                <p></p>
+            </div>
+        </div>
+        <div class="row" id="inside_pages">
+            <div class="col-sm-6" id="charts">
+                <img src="Images/Latinx_twenty_year_graph.png" alt="Latinx line graph, 2010-2029">
+            </div>
 
-    <div class="row">
+            <div class="col-sm-6" id="charts" </div>
+                <img src="Images/White_thirteen_year_graph.png" alt="Whites line graph, 2010-2029">
+            </div>
+        </div>
 
+        <div class="row" id="inside_pages">
+            <div class="col-sm-6" id="charts_left_2">
+                <img src="Images/Latinx_ratios_2010-2029.png" alt="advancement ratios 2010-2029">
+            </div>
 
+            <div class="col-sm-6" id="charts_right_2" </div>
+                <img src="Images/Latinx_ratio_change19.png" alt="Latinx ratio change 10 years">
+                <img src="Images/Latinx_ratio_change29.png" alt="Latinx ratio change 20 years">
+            </div>
+        </div>
 
     </div>
-
-
 
 
     <footer class="footer ">
