Finalized text on analysis pages

--- a/templates/african-am.html
+++ b/templates/african-am.html
@@ -43,9 +43,13 @@
     <div class="container-fluid" id="detail_pages">
         <div class="row" id="detail">
             <div class="col-md-12" id="detail_title_section">
-                <h3>African-Americans</h3>
+                <h3>Steady but slow progress leaves African-Americans behind 65 years post-Title VII</h3>
                 <br>
-                <p></p>
+                <p>Between 2010 and 2029 we can expect the representation of African-Americans in higher job levels to continue to increase, but very slowly, leaving their share of these jobs well below their share of the total workforce. In the past ten
+                    years, African-Americans have experienced advancement ratio growth in the managerial category of under 7 percent. Change in the coming decade is predicted to be 8.8%, leaving the ratio of management jobs to total workforce still below
+                    70% in 2029. The rate of change for African-Americans in professional jobs is barely perceptible. Only in the CEO category do we see more aggressive progress, although ratios still have a long way to go to reach parity.
+                </p>
+                <p><em>Note that the future trend for whites is based on only three years of actual previous data and may be less reliable than forecasts for other groups.</em></p>
             </div>
         </div>
         <div class="row" id="inside_pages">
