--- a/templates/asians.html
+++ b/templates/asians.html
@@ -44,9 +44,13 @@
     <div class="container-fluid" id="detail_pages">
         <div class="row" id="detail">
             <div class="col-md-12" id="detail_title_section">
-                <h3>Asians</h3>
+                <h3>Asians start closer to parity and, despite slow advances, are nearly there by 2029</h3>
                 <br>
-                <p></p>
+                <p>From the beginning of our time period, Asian workers are over-represented in professional jobs compared to their representation in the workforce as a whole. In managerial jobs, Asians began the 2010s within 10 points of parity. Their rate
+                    of progress over that decade was only 2.3 percent and is projected at 5.5 percent between 2019 and 2029, by which time they will have reached a 96 percent advancement ratio in the management category. Asians' share of CEO jobs has,
+                    and will likely continue, to rise at a much faster rate.
+                </p>
+                <p><em>Note that the future trend for whites is based on only three years of actual previous data and may be less reliable than forecasts for other groups.</em></p>
             </div>
         </div>
         <div class="row" id="inside_pages">
