--- a/templates/overview.html
+++ b/templates/overview.html
@@ -49,7 +49,7 @@
                     advancements have been small over the last decade, and, if the pace of change remains constant, over the next ten years, will remain so. </p>
                 <p>There are some exceptions to the general trend. Women and Asians are over-represented in professional positions. By 2029, Asians are predicted to hold more CEO jobs than their proportion of the workforce.</p>
                 <p>To view data for each demographic group, select a page from the dropdown menu above.</p>
-                <p>(Note that BLS does not report data on whites before 2017. Future trends for that group are based only on 2017-2019 averages and may therefore be less reliable than for other groups.)</p>
+                <p><em>Note that BLS does not report data on whites before 2017. Future trends for that group are based only on 2017-2019 averages and may therefore be less reliable than for other groups.</em></p>
             </div>
         </div>
 
