--- a/templates/latinx.html
+++ b/templates/latinx.html
@@ -42,9 +42,11 @@
     <div class="container-fluid" id="detail_pages">
         <div class="row" id="detail">
             <div class="col-md-12" id="detail_title_section">
-                <h3>Latinx</h3>
+                <h3>Latinx workers post largest proportional gains of all demographic groups in professional and managerial jobs</h3>
                 <br>
-                <p></p>
+                <p>While their representation in the professional and management ranks, compared to their share of the total workforce, lagged other groups in 2010, Latinx workers have seen greater gains. By 2029 their advancement ratios will have increased
+                    by 15 and 18 points, respectively, in those categories, although even their levels will remain well below parity. Unlike African-Americans and Asians, however, Latinx are not expected to gain much ground among CEOs. </p>
+                <p><em>Note that the future trend for whites is based on only three years of actual previous data and may be less reliable than forecasts for other groups.</em></p>
             </div>
         </div>
         <div class="row" id="inside_pages">
